@@ -24,17 +24,14 @@ public class ColorSwapGame extends Game {
 
     public ColorSwapGame(Minigames minigames, Arena arena) {
         super(minigames, arena);
+        grid = new Grid(minigames, arena, arena.getSpawn(), gridSize, cellSize);
+        remainingPlayers = new ArrayList<>();
     }
 
     @Override
     public void onStart() {
-        remainingPlayers = new ArrayList<>();
         remainingPlayers.addAll(arena.getPlayers());
-        grid = new Grid(minigames, arena, arena.getSpawn(), gridSize, cellSize);
-
-        for (UUID uuid : arena.getKits().keySet()) {
-            arena.getKits().get(uuid).onStart(Bukkit.getPlayer(uuid));
-        }
+        grid.start();
     }
 
     @Override
@@ -56,7 +53,7 @@ public class ColorSwapGame extends Game {
                 }
                 remainingPlayers.remove(player.getUniqueId());
                 if (remainingPlayers.size() == 1) {
-                    Player winningPlayer = Bukkit.getPlayer(remainingPlayers.getFirst());
+                    Player winningPlayer = Bukkit.getPlayer(remainingPlayers.get(0));
                     arena.sendMessage(ChatColor.GOLD + winningPlayer.getDisplayName() + " has Won! Thanks for Playing!");
                     arena.reset(true);
                 }
